samples/_failures_safe/1761213852_d4df32_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d83de23e.c: In function ‘main’:
./samples/SAFE/__tmp_d83de23e.c:158:13: error: expected expression at end of input
  158 |             a.rows =
      |             ^
./samples/SAFE/__tmp_d83de23e.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d83de23e.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d83de23e.c:158:13: error: expected declaration or statement at end of input
